cluster/apps/media/tdarr/resources/deployment-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-node
  namespace: media
  labels:
    app: tdarr-node
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr-node
  template:
    metadata:
      labels:
        app: tdarr-node
      annotations:
        backup.velero.io/backup-volumes-excludes: gpu,media
    spec:
      containers:
        - name: tdarr-node
          image: ghcr.io/haveagitgat/tdarr_node:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
              gpu.intel.com/i915: 1
            limits:
              cpu: 2000m
              memory: 1Gi
              gpu.intel.com/i915: 1
          volumeMounts:
            - name: gpu
              mountPath: /dev/dri
            - name: media
              mountPath: /media
            - name: transcode
              mountPath: /temp
      volumes:
        - name: gpu
          hostPath:
            path: /dev/dri
        - name: media
          persistentVolumeClaim:
            claimName: tdarr-media
        - name: transcode
          emptyDir:
            medium: Memory
            sizeLimit: 6Gi
