cluster/apps/media/tdarr/resources/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-server
  namespace: media
  labels:
    app: tdarr-server
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr-server
  template:
    metadata:
      labels:
        app: tdarr-server
      annotations:
        backup.velero.io/backup-volumes-excludes: media,transcode
    spec:
      containers:
        - name: tdarr-server
          image: ghcr.io/haveagitgat/tdarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8266
              name: server
              protocol: TCP
            - containerPort: 8265
              name: dashboard
              protocol: TCP
          resources:
            requests:
              cpu: 1000m
              memory: 0.5Gi
            limits:
              cpu: 2000m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: media
              mountPath: /media
            - name: server
              mountPath: /app/server
            - name: transcode
              mountPath: /transcode
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config
        - name: media
          persistentVolumeClaim:
            claimName: tdarr-media
        - name: server
          persistentVolumeClaim:
            claimName: tdarr-server
        - name: transcode
          persistentVolumeClaim:
            claimName: tdarr-transcode
