cluster/apps/media/tdarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
spec:
  selector:
    app: tdarr-server
  ports:
    - name: dashboard
      port: 80
      protocol: TCP
      targetPort: 8265
