cluster/apps/media/tdarr/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr-http
  namespace: media
spec:
  hostnames:
    - tdarr.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: tdarr
          port: 8265
